crates/toml_edit/tests/fixtures/invalid/table-with-pound.stderr
TOML parse error at line 1, column 5
  |
1 | [key#group]
  |     ^
Unexpected `#`
Expected `.` or `]`
While parsing a Table Header
